--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@
 *.DS_Store
 
 # ignore files (likely datasets or graphics) if too large (> 100 MB)
+# data files that are too large
+data/geriatric_pop_healthcare_facility_data.csv
 # specify pathway to dataset data/project_dataset.csv
 # if all datasets are too large then use data/*.csv (only ignores CSVs)
 # if you have other file types then use appropriate extension data/*.rds
